--- a/5-FlexPanelGalery/index.html
+++ b/5-FlexPanelGalery/index.html
@@ -37,15 +37,15 @@
             color: white;
             text-align: center;
             align-items: center;
-            transition:
-                font-size: 0.7 cubic-bezier(0.61,-0.19, 0.7,-0.11);
-                flex: 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11);
-                background: 0.2s;
+            transition: font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+                        flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+                        background 0.2s;
             font-size: 20px;
             background-size: cover;
             background-position: center;
             flex: 1;
             justify-content: center;
+            align-items: center;
             display: flex;
             flex-direction: column;
         }
@@ -66,10 +66,10 @@
             align-items: center;
         }
 
-        .panel > *:first-child {transform: translate(-100%);}
+        .panel > *:first-child {transform: translateY(-100%);}
         .panel.open-active > *:first-child{transform: translateY(0);}
         .panel > *:last-child{transform: translateY(100%);}
-        .panel.panel.open-active > *:last-child {transform: translateY(0);}
+        .panel.open-active > *:last-child {transform: translateY(0);}
 
         .panel p {
             text-transform: uppercase;
@@ -83,6 +83,7 @@
         }
 
         .panel.open {
+            flex: 5;
             font-size: 40px;
         }
         
